GLSL version hoisting based on keywords and support